Fixed a spacing regression with paragraphs

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -168,7 +168,7 @@ h3 + p
 	margin-top: 0.2em
 
 p
-	margin: 0 auto
+	margin: 1em auto
 	line-height: 1.8em
 	font-size: 1em
 	width: 95%
